--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section class="conteudo">
-        <div>
+        <div class="conteudo-titulo">
     <img src="unlock.svg" alt="cadeado fechado">
     <h2 class="titulo-principal">Gerador de senhas</h2>
     <h3 class="titulo-secundario">Gere instantaneamente uma senha aleatória e segura</h3>
